[package]
name = "io-filters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
os_pipe = { version = "1.1.3", features = ["io_safety"] }

[dev-dependencies]
parking_lot = { version = "0.12.1", features = ["send_guard"] }